[package]
name = "prima_pc"
version = "1.0.0"
edition = "2021"

[dependencies]
jni = "0.19.0"
chrono = "0.4.19"
dirs2 = "3.0.1"
futures = { version = "0.3.21" }
rodio = "0.15.0"
async-recursion = "1.0.0"
once_cell = "1.12.0"
os_str_bytes = "6.1.0"
futures-timer = "3.0.2"
atomic_float = "0.1.0"
yaml-rust = "0.4.5"
diesel = { version = "1.4.8", features = ["sqlite"] }
diesel_migrations = "1.4.0"
dotenv = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.20.0", features = ["full"] }

[lib]
crate-type = ["cdylib"]
