[package]
name = "prima_pc"
version = "1.0.0"
edition = "2021"

[dependencies]
jni = "0.21.1"
chrono = "0.4.26"
dirs2 = "3.0.1"
futures = { version = "0.3.28" }
rodio = "0.17.1"
async-recursion = "1.0.4"
once_cell = "1.18.0"
os_str_bytes = "6.5.1"
futures-timer = "3.0.2"
atomic_float = "0.1.0"
yaml-rust = "0.4.5"
diesel = { version = "2.1.0", features = ["sqlite"] }
diesel_migrations = "2.0.0"
dotenv = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.32.0", features = ["full"] }

[lib]
crate-type = ["cdylib"]
